@@ -1,6 +1,8 @@
 -----------
 New in 0.10
 -----------
+Raised default clock to 136Mhz for F200 models (minimum frequency for touchscreen)
+Fixed bug in link navigation
 Support for additional utf8 characters
 Restructured the virtual keyboard dialog with touchscreen support
 New translations: Basque, Catalan, Turkish
